test/conformance/chainsaw/configs/emit-success-events-upon-generateSuccessEvents-set-true/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: foo
  namespace: default
  labels:
    team: kyverno
